--- a/Pages/Activity.cshtml
+++ b/Pages/Activity.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model Personal_Diary.Pages.ActivityModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
 	ViewData["Title"] = "Активность";
 }
